bh-web-2tier/webdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bh-web
  name: bh-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bh-web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bh-web
    spec:
      containers:
      - image: adminer
        name: adminer
        ports:
        - containerPort: 8080
        resources: {}
status: {}
