bh-web-2tier/db_lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bh-db
  name: bh-db-lb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: bh-db
status:
  loadBalancer: {}
