bh-web-2tier/weblb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bh-web
  name: bh-weblb
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bh-web
  type: ClusterIP
status:
  loadBalancer: {}
